small typo in default properties file

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -116,7 +116,7 @@ distributed_db_password=MongoDB_Password_Goes_Here
 enable_generic_mqtt_processor=false
 # MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 # MQTT: mqtt_address=Your_MQTT_broker_IP_address_Goes_Here
-# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size;thread
+# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 # GETSTARTED: mqtt_address=127.0.0.1
 mqtt_port=1883
 mqtt_username=off
