enable option of deregistration deletes

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -56,6 +56,11 @@ mds_gw_keystore_password=arm1234
 mds_bridge_error_level=warning,critical
 
 #
+# Test: remove shadow on Pelion "Deregistration" event
+#
+mds_remove_on_deregistration=false
+
+#
 # Health Statistics Configuration (fires every 1 min = 60000 ms)
 #
 heath_check_sleep_time_ms=60000
