Added templates for adding new sample processors

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -115,6 +115,16 @@ distributed_db_port=MongoDB_Port_Num_Goes_Here
 distributed_db_username=MongoDB_Username_Goes_Here
 distributed_db_password=MongoDB_Password_Goes_Here
 
+
+#
+# SAMPLE Peer Processor Configuration
+#
+SAMPLE_enable_addon=false
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;SAMPLE_auth_token;mds_max_shadow_create_threads;heath_check_sleep_time_ms
+SAMPLE_auth_token=SAMPLE_Auth_Token_Goes_Here
+SAMPLE_content_type="application/json"
+SAMPLE_device_prefix="mbed"
+
 #
 # Generic MQTT Peer Processor Configuration
 #
