added more customization to the peer processor connections HS check

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -76,9 +76,9 @@ long_poll_validator_key=long_poll_active
 long_poll_validator_description=Long Poll Functional
 long_poll_validator_interval_ms=10000
 
-mqtt_validator_key=mqtt_connections
-mqtt_validator_description=MQTT Connections
-mqtt_validator_interval_ms=10000
+peer_validator_key=peer_connections
+peer_validator_description=Peer Connection Status
+peer_validator_interval_ms=10000
 
 shadow_count_validator_key=shadow_device_count
 shadow_count_validator_description=Shadow Device Count
