added JVM memory stats

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -88,6 +88,26 @@ thread_count_validator_key=thread_count
 thread_count_validator_description=Thread Count
 thread_count_validator_interval_ms=10000
 
+mem_total_validator_key=mem_total
+mem_total_validator_description=Total Memory
+mem_total_validator_interval_ms=10000
+
+mem_free_validator_key=mem_free
+mem_free_validator_description=Free Memory
+mem_free_validator_interval_ms=10000
+
+mem_used_validator_key=mem_used
+mem_used_validator_description=Used Memory
+mem_used_validator_interval_ms=10000
+
+mem_max_validator_key=mem_max
+mem_max_validator_description=Max Memory
+mem_max_validator_interval_ms=10000
+
+mem_processors_validator_key=mem_processors
+mem_processors_validator_description=Avail Processors
+mem_processors_validator_interval_ms=10000
+
 #
 # Websocket Log Streaming Port
 #
