pagination support in pelion, scaling tests and updates

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -31,6 +31,11 @@ threads_max_pool_size=1000
 mds_max_shadow_create_threads=100
 
 #
+# Pagination Limit for Pelion
+#
+pelion_pagination_limit=100
+
+#
 # Pelion Processor configuration (was mDS, Connector, mbed Cloud)
 #
 api_key=Pelion_API_Key_Goes_Here
