updated thread count health stat

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -110,7 +110,7 @@ mem_max_validator_description=Max Memory
 mem_max_validator_interval_ms=10000
 
 mem_processors_validator_key=mem_processors
-mem_processors_validator_description=Available Processors
+mem_processors_validator_description=Available Processor(s)
 mem_processors_validator_interval_ms=10000
 
 #
