established maximum number of permissible device shadows

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -36,6 +36,11 @@ mds_max_shadow_create_threads=100
 pelion_pagination_limit=100
 
 #
+# Maxmimum number of shadows permitted
+#
+max_shadows=100000
+
+#
 # Pelion Processor configuration (was mDS, Connector, mbed Cloud)
 #
 api_key=Pelion_API_Key_Goes_Here
@@ -154,9 +159,9 @@ SAMPLE_device_prefix="mbed"
 # Generic MQTT Peer Processor Configuration
 #
 enable_generic_mqtt_processor=false
-# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# MQTT: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;max_shadows;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 # MQTT: mqtt_address=Your_MQTT_broker_IP_address_Goes_Here
-# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# GETSTARTED: config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;max_shadows;heath_check_sleep_time_ms;mqtt_address;mqtt_port;mqtt_connect_retries;mqtt_use_ssl;mqtt_username;mqtt_password;mqtt_client_id;mqtt_mds_topic_root;mqtt_no_client_creds;mqtt_import_keystore;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 # GETSTARTED: mqtt_address=127.0.0.1
 mqtt_port=1883
 mqtt_username=off
@@ -192,7 +197,7 @@ mqtt_version=3.1.1
 # IBM Watson IoT MQTT Peer Processor Add-On
 #
 enable_iotf_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;iotf_api_key;iotf_auth_token;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;max_shadows;heath_check_sleep_time_ms;iotf_api_key;iotf_auth_token;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 iotf_device_data_key=d
 iotf_mqtt_port=1883
 iotf_api_key=Watson_IoT_API_Key_Goes_Here
@@ -217,7 +222,7 @@ iotf_use_rti_format=false
 # NOTE: mqtt_keep_alive must be set to no greater than 120 seconds... Azure will close connections that are older...
 #
 enable_iot_event_hub_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;iot_event_hub_connect_string;iot_event_hub_enable_device_id_prefix;iot_event_hub_device_id_prefix;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;iot_event_hub_max_shadows;heath_check_sleep_time_ms;iot_event_hub_connect_string;iot_event_hub_enable_device_id_prefix;iot_event_hub_device_id_prefix;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 iot_event_hub_connect_string=IoT_Hub_Connect_String_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
 iot_event_hub_mqtt_password=HostName=__IOT_EVENT_HUB__.azure-devices.net;DeviceId=__EPNAME__;SharedAccessKey=__EPNAME_KEY__
@@ -230,12 +235,13 @@ iot_event_hub_device_id_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/
 iot_event_hub_add_device_json={deviceId:"__EPNAME__",status:"enabled",statusReason:""}
 iot_event_hub_enable_device_id_prefix=false
 iot_event_hub_device_id_prefix=mbed
+iot_event_hub_max_shadows=25000
 
 #
 # AWS IoT MQTT Peer Processor Add-On
 #
 enable_aws_iot_gw_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;aws_iot_max_shadows;heath_check_sleep_time_ms;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 aws_iot_region=AWS_IoT_region_goes_here
 aws_iot_access_key_id=AWS_IoT_Access_Key_ID_Goes_Here
 aws_iot_secret_access_key=AWS_IoT_Secret_Access_Key_Goes_Here
@@ -244,12 +250,13 @@ aws_iot_policy_document={\"Version\":\"2012-10-17\",\"Statement\":[{\"Action\":[
 aws_iot_observe_notification_topic=__TOPIC_ROOT__/observation/__DEVICE_TYPE__/__EPNAME__
 aws_iot_coap_cmd_topic=__TOPIC_ROOT__/__COMMAND_TYPE__/__DEVICE_TYPE__/__EPNAME__/#
 aws_iot_topic_root=mbed
+aws_iot_max_shadows=25000
 
 #
 # Google CloudIoT MQTT Peer Processor Add-On
 #
 enable_google_cloud_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;heath_check_sleep_time_ms;google_cloud_auth_json;google_cloud_region;google_cloud_registry_name;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;google_cloud_max_shadows;heath_check_sleep_time_ms;google_cloud_auth_json;google_cloud_region;google_cloud_registry_name;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 google_cloud_region=Google_Cloud_Region_Goes_Here
 google_cloud_auth_json=Google_Cloud_Auth_JSON_Goes_Here
 google_cloud_registry_name=pelionDeviceRegistry
@@ -273,3 +280,4 @@ google_cloud_sleep_time=1000
 google_cloud_max_messages=2
 google_cloud_topic_slash_delimiter=.
 google_cloud_topic_segment_delimiter=_
+google_cloud_max_shadows=25000
