http retry fixes and enhancements

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -41,6 +41,21 @@ pelion_pagination_limit=100
 max_shadows=100000
 
 #
+# Http connect/read timeout in ms
+#
+http_timeout_ms=120000
+
+#
+# Number of https "get" retries (typically 10 is enough)
+#
+http_get_num_retries=10
+
+#
+# Wait time between https "get" invocations (typically 1 second is enough)
+#
+http_get_retry_wait_ms=1000
+
+#
 # Pelion Processor configuration (was mDS, Connector, mbed Cloud)
 #
 api_key=Pelion_API_Key_Goes_Here
