cleanups for device deletion notifications, config tweaks

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -86,9 +86,9 @@ mds_bridge_error_level=warning,critical
 mds_remove_on_deregistration=false
 
 #
-# Health Statistics Configuration (fires every 1 min = 60000 ms)
+# Health Statistics Configuration (fires every 15 seconds)
 #
-heath_check_sleep_time_ms=60000
+heath_check_sleep_time_ms=15000
 webhook_validator_key=webhook_connection
 webhook_validator_description=Webhook Functional
 webhook_validator_interval_ms=10000
@@ -106,7 +106,7 @@ peer_validator_description=Peer Connection Status
 peer_validator_interval_ms=10000
 
 shadow_count_validator_key=shadow_device_count
-shadow_count_validator_description=Shadow Device Count
+shadow_count_validator_description=Active Device Shadow Count
 shadow_count_validator_interval_ms=10000
 
 thread_count_validator_key=thread_count
