bugfix in orchestrator, new http transports for each peer and pelion

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -86,9 +86,9 @@ mds_bridge_error_level=warning,critical
 mds_remove_on_deregistration=false
 
 #
-# Health Statistics Configuration (fires every 15 seconds)
+# Health Statistics Configuration (fires every 5 sec)
 #
-heath_check_sleep_time_ms=15000
+heath_check_sleep_time_ms=5000
 webhook_validator_key=webhook_connection
 webhook_validator_description=Webhook Functional
 webhook_validator_interval_ms=10000
