initial HTTP-based IoTHub implementation. Bug fixes and removed old code.

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -244,13 +244,16 @@ iot_event_hub_mqtt_password=HostName=__IOT_EVENT_HUB__.azure-devices.net;DeviceI
 iot_event_hub_mqtt_ip_address=__IOT_EVENT_HUB__.azure-devices.net
 iot_event_hub_observe_notification_topic=devices/__EPNAME__/messages/events/
 iot_event_hub_coap_cmd_topic=devices/__EPNAME__/messages/devicebound/#
-iot_event_hub_api_version=2016-11-14
-iot_event_hub_version_tag=api-version\=2016-11-14
+iot_event_hub_api_version=2018-06-30
+iot_event_hub_version_tag=api-version\=2018-06-30
 iot_event_hub_device_id_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__?api-version=__API_VERSION__
+iot_event_hub_observe_notification_message_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__/messages/events?api-version=__API_VERSION__
+iot_event_hub_device_cmd_message_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__/messages/devicebound?api-version=__API_VERSION__
 iot_event_hub_add_device_json={deviceId:"__EPNAME__",status:"enabled",statusReason:""}
 iot_event_hub_enable_device_id_prefix=true
 iot_event_hub_device_id_prefix=mbed
 iot_event_hub_max_shadows=25000
+iot_event_hub_transport=mqtt
 
 #
 # AWS IoT MQTT Peer Processor Add-On
@@ -266,6 +269,7 @@ aws_iot_observe_notification_topic=__TOPIC_ROOT__/observation/__DEVICE_TYPE__/__
 aws_iot_coap_cmd_topic=__TOPIC_ROOT__/__COMMAND_TYPE__/__DEVICE_TYPE__/__EPNAME__/#
 aws_iot_topic_root=mbed
 aws_iot_max_shadows=25000
+aws_iot_transport=mqtt
 
 #
 # Google CloudIoT MQTT Peer Processor Add-On
@@ -296,3 +300,4 @@ google_cloud_max_messages=2
 google_cloud_topic_slash_delimiter=.
 google_cloud_topic_segment_delimiter=_
 google_cloud_max_shadows=25000
+google_cloud_transport=mqtt
