--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -249,6 +249,7 @@ iot_event_hub_version_tag=api-version\=2018-06-30
 iot_event_hub_device_id_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__?api-version=__API_VERSION__
 iot_event_hub_observe_notification_message_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__/messages/events?api-version=__API_VERSION__
 iot_event_hub_device_cmd_message_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__/messages/devicebound?api-version=__API_VERSION__
+iot_event_hub_device_cmd_ack_url=https://__IOT_EVENT_HUB__.azure-devices.net/devices/__EPNAME__/messages/devicebound/__ETAG__?api-version=__API_VERSION__
 iot_event_hub_add_device_json={deviceId:"__EPNAME__",status:"enabled",statusReason:""}
 iot_event_hub_enable_device_id_prefix=true
 iot_event_hub_device_id_prefix=mbed
