reorganize for HTTP-based peers (AWS, Google) similar to MS

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -237,7 +237,7 @@ iotf_use_rti_format=false
 # NOTE: mqtt_keep_alive must be set to no greater than 120 seconds... Azure will close connections that are older...
 #
 enable_iot_event_hub_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;iot_event_hub_max_shadows;heath_check_sleep_time_ms;iot_event_hub_connect_string;iot_event_hub_enable_device_id_prefix;iot_event_hub_device_id_prefix;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;iot_event_hub_transport;mds_max_shadow_create_threads;iot_event_hub_max_shadows;heath_check_sleep_time_ms;iot_event_hub_connect_string;iot_event_hub_enable_device_id_prefix;iot_event_hub_device_id_prefix;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 iot_event_hub_connect_string=IoT_Hub_Connect_String_Goes_Here
 iot_event_hub_mqtt_username=__IOT_EVENT_HUB__.azure-devices.net/__EPNAME__
 iot_event_hub_mqtt_password=HostName=__IOT_EVENT_HUB__.azure-devices.net;DeviceId=__EPNAME__;SharedAccessKey=__EPNAME_KEY__
@@ -260,7 +260,7 @@ iot_event_hub_transport=mqtt
 # AWS IoT MQTT Peer Processor Add-On
 #
 enable_aws_iot_gw_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;aws_iot_max_shadows;heath_check_sleep_time_ms;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;aws_iot_transport;mds_max_shadow_create_threads;aws_iot_max_shadows;heath_check_sleep_time_ms;aws_iot_region;aws_iot_access_key_id;aws_iot_secret_access_key;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 aws_iot_region=AWS_IoT_region_goes_here
 aws_iot_access_key_id=AWS_IoT_Access_Key_ID_Goes_Here
 aws_iot_secret_access_key=AWS_IoT_Secret_Access_Key_Goes_Here
@@ -276,7 +276,7 @@ aws_iot_transport=mqtt
 # Google CloudIoT MQTT Peer Processor Add-On
 #
 enable_google_cloud_addon=false
-# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;mds_max_shadow_create_threads;google_cloud_max_shadows;heath_check_sleep_time_ms;google_cloud_auth_json;google_cloud_region;google_cloud_registry_name;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;google_cloud_transport;mds_max_shadow_create_threads;google_cloud_max_shadows;heath_check_sleep_time_ms;google_cloud_auth_json;google_cloud_region;google_cloud_registry_name;mqtt_connect_retries;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
 google_cloud_region=Google_Cloud_Region_Goes_Here
 google_cloud_auth_json=Google_Cloud_Auth_JSON_Goes_Here
 google_cloud_registry_name=pelionDeviceRegistry
