--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -301,4 +301,7 @@ google_cloud_max_messages=2
 google_cloud_topic_slash_delimiter=.
 google_cloud_topic_segment_delimiter=_
 google_cloud_max_shadows=25000
+google_cloudb_observe_notification_message_url=
+google_cloud_device_cmd_message_url=
+google_cloud_device_cmd_ack_url=
 google_cloud_transport=mqtt
