google HTTP peer processor operational

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -301,7 +301,7 @@ google_cloud_max_messages=2
 google_cloud_topic_slash_delimiter=.
 google_cloud_topic_segment_delimiter=_
 google_cloud_max_shadows=25000
-google_cloudb_observe_notification_message_url=
-google_cloud_device_cmd_message_url=
-google_cloud_device_cmd_ack_url=
+google_cloud_observe_notification_message_url=https://cloudiotdevice.googleapis.com/v1/projects/__PROJECT_ID__/locations/__CLOUD_REGION__/registries/__REGISTRY_NAME__/devices/__EPNAME__:publishEvent
+google_cloud_device_config_request_url=https://cloudiotdevice.googleapis.com/v1/projects/__PROJECT_ID__/locations/__CLOUD_REGION__/registries/__REGISTRY_NAME__/devices/__EPNAME__/config?localVersion=0
+google_cloud_device_set_state_command_url=https://cloudiotdevice.googleapis.com/v1/projects/__PROJECT_ID__/locations/__CLOUD_REGION__/registries/__REGISTRY_NAME__/devices/__EPNAME__:setState
 google_cloud_transport=mqtt
