initial updates for notification selection and websocket use

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -62,6 +62,9 @@ api_key=Pelion_API_Key_Goes_Here
 api_endpoint_address=api.us-east-1.mbedcloud.com
 unified_format_enabled=true
 mds_enable_long_poll=true
+mds_enable_web_socket=false
+mds_enable_web_hook=false
+mds_notfication_type=longpoll
 mds_gw_address=off
 mds_gw_port=28520
 mds_def_ep_type=default
