--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -76,6 +76,8 @@ mds_long_poll_uri=notification/pull
 mds_gw_context_path=/pelion-bridge
 mds_gw_events_path=/events
 mds_gw_keystore_password=arm1234
+mds_enable_attribute_gets=true
+mds_attribute_uri_list=["/3/0/0","/3/0/1","/3/0/2"]
 
 #
 # Debugging levels (info == lots!!)
