add override for validation checking

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -78,6 +78,7 @@ mds_gw_events_path=/events
 mds_gw_keystore_password=arm1234
 mds_enable_attribute_gets=true
 mds_attribute_uri_list=["/3/0/0","/3/0/1","/3/0/2"]
+mds_skip_validation_checks=false
 
 #
 # Debugging levels (info == lots!!)
