minor updates for debugging

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -80,6 +80,7 @@ mds_enable_attribute_gets=true
 mds_attribute_uri_list=["/3/0/0","/3/0/1","/3/0/2"]
 mds_skip_validation_checks=true
 mds_enable_device_request_api=false
+debug_rest_calls=false
 
 #
 # Debugging levels (info == lots!!)
