initial treasuredata support added

--- a/src/main/webapp/WEB-INF/classes/service.properties
+++ b/src/main/webapp/WEB-INF/classes/service.properties
@@ -313,3 +313,13 @@ google_cloud_observe_notification_message_url=https://cloudiotdevice.googleapis.
 google_cloud_device_config_request_url=https://cloudiotdevice.googleapis.com/v1/projects/__PROJECT_ID__/locations/__CLOUD_REGION__/registries/__REGISTRY_NAME__/devices/__EPNAME__/config?localVersion=0
 google_cloud_device_set_state_command_url=https://cloudiotdevice.googleapis.com/v1/projects/__PROJECT_ID__/locations/__CLOUD_REGION__/registries/__REGISTRY_NAME__/devices/__EPNAME__:setState
 google_cloud_transport=mqtt
+
+#
+# TreasureData API Peer Processor Add-On
+#
+enable_td_addon=false
+# config_fields=api_key;mds_enable_long_poll;api_endpoint_address;mds_gw_address;mds_gw_port;td_api_key;td_endpoint;td_database_table_name;mds_max_shadow_create_threads;max_shadows;heath_check_sleep_time_ms;mds_bridge_error_level;threads_core_pool_size;threads_max_pool_size
+td_api_key=TD_Master_API_Key_Goes_Here
+td_endpoint=api.treasuredata.com
+td_client_retry_limit=7
+td_database_table_name=observations
