--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,16 @@
             <version>1.7.30</version>
         </dependency>
         <dependency>
+            <groupId>com.treasuredata.client</groupId>
+            <artifactId>td-client</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.treasuredata</groupId>
+            <artifactId>td-logger</artifactId>
+            <version>0.2.3</version>
+          </dependency>
+        <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.14</version>
